public/css/style.css
* {
    -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;

    -webkit-hyphens: auto;
       -moz-hyphens: auto;
            hyphens: auto;
    
}

html,
body {
    font-family: arial, sans-serif;
    height: 100%;
    margin: 0;
    padding: 10px 10px 20px 20px;
    background-color: #82ACC3;
}

input {
    font-size: 12px;
}

header {
    background-color: #333;
}

aside {
    background-color: #777;
}

.one-result {
    color: white;
    width: 100%;
    margin: 5px;
}

.one-result:hover { 
    color:  #996515;
 }

.one-result-container:hover {
    background-color: #cccccc;
    width: 200px;
}


@media screen and (max-width: 599px){

    header {
        top: 0;
        left: 0;
        right: 0;
        height: 160px;
        position: absolute;
    }

    header-title {
        color: white;
        font-size: 20px;
        display: block;
        padding-top: 15px;
        padding-bottom: 15px;
        margin: 0 auto;
    }

    .nav-location {
        left: 20px;
        right: 10px;
        position: absolute;
    }

    .nav-query {
        left: 20px;
        right: 10px;
        top: 100px;
        position: absolute;
    }

    #places-search {
        width: 200px;
        display: inline-block;
    }

    #zoom-to-area-text {
        width: 200px;
        display: inline-block;
    }

    #zoom-to-area {
        display: inline-block;
    }

    #go-places {
        display: inline-block;
    }

    #map {
        background-color: #3993D7;
        left: 0;
        right: 0;
        bottom: 0;
        top: 160px;
        height: 500;
        position: absolute;
        display: block;
    }

    aside {
        left: 0;
        right: 0;
        top: 570px;
        position: absolute;
    }

    /*header {
        top: 0;
        left: 0;
        right: 0;
        position: absolute;
        height: 160px;

    }

    header-title {
        color: white;
        font-size: 20px;
        display: block;
        padding-left: 2px;
        padding-top: 15px;
        padding-bottom: 15px;
        text-align: center;
    }
    
    aside {
        display: block;
        width: 100%;
        background-color: #777;
    }


    nav {
        display: flex;
        flex-wrap: wrap;
    }

    .nav-location {
        display: inline-block;
        margin: 0 auto;
        padding: 5px;
        position: relative; 

    }

    .nav-query {
        display: inline-block;
        margin: 0 auto;
        padding: 5px;
        position: relative;
    }

    #map {
        background-color: #3993D7;
        left: 0;
        right: 0;
        bottom: 0;
        top: 160px;
        position: absolute;
        display: block;
    }

    .one-result-container:hover {
        width: 100%;
    }

    .one-result {
        width: 200px;
        padding: 5px;
        margin: 0 auto;
        text-align: center;
    }*/
}

@media screen and (min-width: 600px){
    header {
        background-color: #333;
        top: 0;
        left: 0;
        width: 100%;
        height: 100px;
        position: fixed;
    }

    main {
        left: 0;
        right: 0;
        top: 100px;
        bottom: 0;
        position: fixed;
    }

   header-title {
        color: white;
        font-size: 20px;
        display: inline-block;
        padding: 20px;
        width: 180px;
        height: 100%;
        top: 10px;
        left: 0;
        word-wrap: break-word;
        text-align: center;
    }

    nav {
        display: inline-block;
        height: 100%;
        left: 200px;
        right: 0;
        padding-top: 7px;
        padding-bottom: 7px;
        position: absolute;
    }

    .nav-location, .nav-query {
        margin: 5px;
    }


    #map {
        background-color: #3993D7;
        height: 100%;
        bottom: 0;
        right: 0;
        left: 200px;
        position: absolute;
    }

    aside {
        background-color: #777;
        width: 200px;
        height: 100%;
        left: 0;
        top: 0;
        bottom: 0;
        position: absolute;
        overflow-y: scroll;
    }

    search-results {
        top: 30px;
        position: absolute;
    }

    #zoom-to-area-text {
        width: 300px;
        display: inline-block;
    }

    #places-search {
        width: 300px;
        display: inline-block;
    }

}

@media screen and (min-width: 1150px){
    header {
        background-color: #333;
        top: 0;
        left: 0;
        width: 100%;
        height: 60px;
        position: fixed;
    }


    main {
        left: 0;
        right: 0;
        top: 60px;
        bottom: 0;
        position: fixed;
    }

    .nav-location, .nav-query {
        display: inline-block;
        padding: 5px;
    }

    .nav-query input {
        left: 20px;
        position: relative;
    }

    header-title{
        color: white;
        font-size: 20px;
        display: inline-block;
        padding-top: 3px;
        padding-bottom: 3px;
        width: 200px;
        height: 100%;
        top: 10px;
        left: 0;
    }

    nav {
        display: inline-block;
        height: 100%;
        left: 200px;
        right: 0;
        padding-top: 7px;
        padding-bottom: 7px;
        position: absolute;
    }

    #map {
        background-color: #3993D7;
        height: 100%;
        bottom: 0;
        right: 0;
        left: 200px;
        position: absolute;
    }

    aside {
        background-color: #777;
        width: 200px;
        height: 100%;
        left: 0;
        top: 0;
        bottom: 0;
        position: absolute;
        overflow-y: scroll;
    }

    search-results {
        top: 30px;
        position: absolute;
    }

    #zoom-to-area-text {
        width: 300px;
        display: inline-block;
    }

    #places-search {
        width: 300px;
        display: inline-block;
    }

}

.text {
    font-size: 12px;
}

#business_info > img {
    width: 200px;
    height: 200px;
}

#infowindow {
    max-width: 400px;
}

#review_header-title {
    float: left;
}

#review_rating {
    float: right;
}

#review_text {
    clear: both;
}

